--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="js/scripts.js" defer></script>
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <div class="todo-container">
